# homework-DavideTrentin

./: CMakeLists.txt  README.md
Client_parcheggio/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Client_parcheggio/include/: client.h
Client_parcheggio/libs/: CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake
Client_parcheggio/src/: CMakeCache.txt  CMakeLists.txt  Makefile  client  cmake_install.cmake  data_reader.cpp
Parcheggio/: CMakeLists.txt
Parcheggio/include/: car.h  data.h  main_functions.h  main_global_var.h  park.h  server.h  sorter.h
Parcheggio/libs/: CMakeLists.txt  car.cpp  data.cpp  main_functions.cpp  park.cpp  server.cpp  sorter.cpp
Parcheggio/src/: CMakeLists.txt  main.cpp  parcheggioDueUscita.txt  parcheggioUnoIngresso.txt  parcheggioUnoUscita.txt  prenotazioni.txt
include/: car.h  park.h
libs/: CMakeLists.txt  Makefile  car.cpp  cmake_install.cmake  park.cpp
src/: CMakeLists.txt  Makefile  car_tester.cpp  cmake_install.cmake  main  main.cpp  parcheggioDueIngresso.txt
